# dojo

./: .gitignore  README.md
algos/evacuate_room/: evacuation_test.rb  notes.txt  script.rb  untitled.rb
challenge/attributes-of-animals/: Plot figures.ipynb  README.md  bottles.ipynb  zoo_attributes.ipynb  zoo_attributes_inception.ipynb
mix/: aritmetic.ipynb  pytorch_basics.ipynb
nets/haskell/: docker-compose.yml
nets/haskell/src/auto-diff-tutorial/: README.md  auto-diff-tutorial.cabal
nets/haskell/src/auto-diff-tutorial/src/: Main.hs
nets/pynet/: requirements.txt
nets/pynet/src/: activations.py  learn.py
nets/pynet/tests/: test_py_network.py
retrieval/py/src/: retrieval.py  tools.py
retrieval/py/tests/: test_retrieval.py  test_tools.py
