name:                auto-diff-tutorial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/moisesvw/dojo/tree/master/nets/haskell/src/auto-diff-tutorial
license:             BSD3
license-file:        LICENSE
author:              moisesweb
maintainer:          moisesweb@gmail.com
copyright:           2018 moisesweb
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable auto-diff-tutorial
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       backprop,
                       hmatrix-backprop,
                       statistics,
                       lens,
                       one-liner-instances,
                       split
